# claude-code-openai-wrapper

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  PARAMETER_MAPPING.md  README.md  auth.py  claude_cli.py  debug_test.py  docker-compose.yml  main.py  message_adapter.py  models.py  parameter_validator.py  pyproject.toml  requirements.txt  session_manager.py  test_basic.py  test_debug_session.py  test_endpoints.py  test_new_default.py  test_non_streaming.py  test_parameter_mapping.py  test_performance_fix.py  test_session_complete.py  test_session_continuity.py  test_session_simple.py  test_textblock_fix.py  test_user_scenario.py
examples/: curl_example.sh  openai_sdk.py  session_continuity.py  session_curl_example.sh  streaming.py
