[project]
name = "claude-code-openai-wrapper"
version = "1.0.0"
description = "OpenAI API-compatible wrapper for Claude Code"
authors = [{ name = "Richard Atkinson", email = "richardatk01@gmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.32.0,<0.33",
    "pydantic>=2.10.0,<3",
    "python-dotenv>=1.0.1,<2",
    "httpx>=0.27.2,<0.28",
    "sse-starlette>=2.1.3,<3",
    "python-multipart>=0.0.12,<0.0.13",
    "claude-code-sdk>=0.0.14,<0.0.15",
]

[project.scripts]
claude-wrapper = "main:run_server"

[dependency-groups]
dev = [
    "black>=24.0.0,<25",
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.23.0,<0.24",
    "requests>=2.32.0,<3",
    "openai>=1.0.0,<2",
]

[tool.hatch.build.targets.sdist]
include = ["*.py"]

[tool.hatch.build.targets.wheel]
include = ["*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310']
